@@ -1,3 +1,5 @@
+27.mar (ws)
+      - first code for new search function (Ctrl+F)
 26.mar (tb)
       - adding Chinese (Traditional) locale
       - adding initial Swedish language update by Magnus Johansson
